--- a/package.json
+++ b/package.json
@@ -46,6 +46,8 @@
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
+    "axios": "^0.24.0",
+    "bootstrap": "^5.1.3",
     "enzyme": "^3.11.0",
     "enzyme-adapter-react-16": "^1.15.6",
     "node-sass": "^7.0.1",
@@ -57,6 +59,7 @@
     "react-scripts": "5.0.0",
     "react-test-renderer": "^17.0.2",
     "redux": "^4.1.2",
+    "redux-thunk": "^2.4.1",
     "web-vitals": "^2.1.2"
   },
   "devDependencies": {
